--- a/app/public/home.html
+++ b/app/public/home.html
@@ -16,7 +16,7 @@
 			<h3>Answer a few Basic questions</h3>
 			<h3>Then find a friend with the greatest compatibility!</h3>
 			<br/>
-			<p><a class="btn btn-success btn-lg" href="#" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Go to Survey</a></p>
+			<p><a class="btn btn-success btn-lg" href="/survey" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Go to Survey</a></p>
 		</div>
 
 
