--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -230,9 +230,9 @@
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 						<h1 id="matchName">This modal is working</h1>
-						<div class="modal-body" id="matchImage">
-							<p>This is a modal sample</p>
-							<div class="modal-footer">
+						<div class="modal-body" >
+							<img src="#" id=matchImage style="height:400px;"></img>
+							<div class="modal-footer" >
 								<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
 
 							</div>
@@ -263,8 +263,8 @@
 			event.preventDefault();
 
 
-			if($("#name-input").val().trim() === "" || $("#image-input").val().trim() === ""){
-				alert("form must be filled out");
+			if($("#name-input").val().trim() === "" || $("#image-input").val().trim() === ""|| $("#Q1").val()=="" || $("#Q2").val()=="" || $("#Q3").val()=="" || $("#Q4").val()=="" || $("#Q5").val()=="" || $("#Q6").val()=="" || $("#Q7").val()=="" || $("#Q8").val()=="" || $("#Q9").val()=="" || $("#Q10").val()==""){
+				alert("Please be sure to answer every question");
 				return false;
 			};
 
@@ -299,15 +299,13 @@
 				};
 
 
-				var newImage = $("<img>");
-				newImage.attr("src", match.image);
-				$("#matchImage").append(newImage);
+			
+				$("#matchImage").attr("src", match.image)
 				$("#matchName").text(match.name);
 
-				
-
-
-
+				$("#name-input").val("");
+				$("#image-input").val("");
+				$(".question").val("");
 
 			});
 
