--- a/app/public/home.html
+++ b/app/public/home.html
@@ -20,6 +20,18 @@
 		</div>
 
 
+
+		<div class="footer">
+			<hr>
+			<p>
+				<a href="/api/friends">API Friends List</a>
+				| 
+				<a href="https://github.com/Patrickae/FriendFinder" target="_blank">GitHub Repo</a>
+			</p>
+			<br>
+		</div>
+
+
 	</div>
 
 
