--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -217,7 +217,7 @@
 			<p>
 				<a href="/api/friends">API Friends List</a>
 				| 
-				<a href="#">GitHub Repo</a>
+				<a href="https://github.com/Patrickae/FriendFinder" targer="_blank">GitHub Repo</a>
 			</p>
 			<br>
 		</div>
