--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -310,12 +310,13 @@
 			});
 
 
-
+			setTimeout(function(){
 			$.post("/api/friends", newFriend).done(function(data){
 				console.log(newFriend);
 				
 
 			});
+		},100);
 		});
 
 
