--- a/app/public/home.html
+++ b/app/public/home.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 	<title>Friend Finder</title>
-
+	<!-- font awesome -->
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+	<!-- bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<!-- my stylesheet -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -17,6 +20,12 @@
 			<h3>Then find a friend with the greatest compatibility!</h3>
 			<br/>
 			<p><a class="btn btn-success btn-lg" href="/survey" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Go to Survey</a></p>
+			<br/>
+			<p>
+				<a href="https://github.com/Patrickae/FriendFinder" target="_blank">
+					<i class="fa fa-github fa-3x"></i>
+				</a>
+			</p>
 		</div>
 
 
